--- a/chat/package.json
+++ b/chat/package.json
@@ -4,7 +4,7 @@
   "description": "A simple chat application built using socket.io and backbone",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "1.18.2",
